Fix Meatball menu alignment

--- a/app/src/userpages/components/StreamPage/List/streamList.pcss
+++ b/app/src/userpages/components/StreamPage/List/streamList.pcss
@@ -1,8 +1,13 @@
-.status {
+.statusColumn {
   text-align: center;
   min-width: initial;
 }
 
-.status > * {
+.statusColumn > * {
   vertical-align: middle;
+}
+
+.menuColumn {
+  min-width: 0 !important;
+  max-width: 36px !important;
 }
